--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -22,7 +22,7 @@
   }
 
   .teksnav1 {
-    @apply flex pl-0 pt-6 px-6 ml-[120px] font-bold text-lg hover:text-[#074288] active:text-[#074288] items-center justify-center;
+    @apply flex pl-0 pt-6 px-6 mx-10 font-bold text-lg hover:text-[#074288] active:text-[#074288] items-center justify-center;
   }
 
   .nav {
